feat: Adição do footer e ajustes de código

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                     <img src="assets/icons/logo-spotify.png" alt="logo do spotify" />
                 </a>
             </div>
-            <div>
                 <ul>
                     <li>
                         <a href="">
@@ -34,12 +33,11 @@
                             <span>Buscar</span>
                     </a></li>
                 </ul>
-            </div>
         </nav>
         <div class="sidebar__navigation library">
             <div class="library__content">
                 <button href="" class="library__button">
-                    <span class="fa fa-book"></span>
+                    <span class="fa fas fa-book"></span>
                     <span>Sua Biblioteca</span>
                 </button>
                 <span class="fa fa-plus"></span>
@@ -62,6 +60,18 @@
             </div>
         </div>
     </div>
+
+    <footer class="premium">
+        <div class="premium__text">
+            <p>TESTAR O PREMIUM DE GRAÇA</p>
+            <p id="subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito.</p>
+        </div>
+        <div class="button__premium">
+            <button>
+                Inscreva-se grátis
+            </button>
+        </div>
+    </footer>
 </body>
 
 </html>
