--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="./src/assets/icons/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="src/styles/reset.css" />
+    <link rel="stylesheet" href="src/styles/vars.css" />
+    <link rel="stylesheet" href="src/styles/sidebar-footer.css" />
+    <link rel="stylesheet" href="src/styles/main-content.css" />
+    <link rel="stylesheet" href="src/styles/media-queries.css" />
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
-        integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous">
+        integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
-        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
+
 </head>
 
 <body>
@@ -18,21 +24,21 @@
         <nav class="sidebar__navigation">
             <div class="logo">
                 <a href="">
-                    <img src="assets/icons/logo-spotify.png" alt="logo do spotify" />
+                    <img src="./src/assets/icons/logo-spotify.png" alt="logo do spotify" />
                 </a>
             </div>
-                <ul>
-                    <li>
-                        <a href="">
-                            <i class="fa fa-home"></i>
-                            <span>Início</span>
-                        </a>
-                    </li>
+            <ul>
+                <li>
                     <a href="">
-                        <li> <i class="fa fas fa-search"></i>
-                            <span>Buscar</span>
-                    </a></li>
-                </ul>
+                        <i class="fa fa-home"></i>
+                        <span>Início</span>
+                    </a>
+                </li>
+                <a href="">
+                    <li> <i class="fa fas fa-search"></i>
+                        <span>Buscar</span>
+                </a></li>
+            </ul>
         </nav>
         <div class="sidebar__navigation library">
             <div class="library__content">
@@ -61,10 +67,162 @@
         </div>
     </div>
 
+    <main>
+        <div class="main-container">
+            <nav class="header__navigation">
+                <div class="navigation">
+                    <button class="arrow-left">
+                        <img src="./src/assets/icons/small-left.png" alt="Seta esquerda">
+                    </button>
+                    <button class="arrow-right">
+                        <img src="./src/assets/icons/small-right.png" alt="Seta direita">
+                    </button>
+
+                    <div class="header__search">
+                        <img src="./src/assets/icons/search.png" alt="">
+                        <input id="search-input" type="text" maxlength="800" autocorrect="off" autocapitalize="off"
+                            spellcheck="false" placeholder="O que você quer ouvir?" value="" />
+                    </div>
+                </div>
+                <div class="header__login">
+                    <button class="subscribe">Inscreva-se</button>
+                    <button class="login">Entrar</button>
+                </div>
+            </nav>
+            <div class="playlist-container">
+                <div id="result-playlist">
+                    <div class="playlist">
+                        <h1 id="greeting">Boa tarde</h1>
+                        <h2 class="session">Navegar por todas as seções</h2>
+                    </div>
+
+                    <div class="offer__scroll-container">
+                        <div class="offer__list">
+                            <section class="offer__list-item">
+                                <a href="" class="cards">
+                                    <div class="cards card1">
+                                        <img src="./src/assets/playlist/1.jpeg" alt="">
+                                        <span>Boas festas</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card2">
+                                        <img src="./src/assets/playlist/2.png" alt="">
+                                        <span>Feitos para você</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card3">
+                                        <img src="./src/assets/playlist/3.jpeg" alt="">
+                                        <span>Lançamentos</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card4">
+                                        <img src="./src/assets/playlist/4.jpeg" alt="">
+                                        <span>Creators</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card5">
+                                        <img src="./src/assets/playlist/5.jpeg" alt="">
+                                        <span>Para treinar</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card6">
+                                        <img src="./src/assets/playlist/6.jpeg" alt="">
+                                        <span>Podcasts</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card7">
+                                        <img src="./src/assets/playlist/7.jpeg" alt="">
+                                        <span>Sertanejo</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card8">
+                                        <img src="./src/assets/playlist/8.jpeg" alt="">
+                                        <span>Samba e pagode</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card9">
+                                        <img src="./src/assets/playlist/9.jpeg" alt="">
+                                        <span>Funk</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card10">
+                                        <img src="./src/assets/playlist/10.jpeg" alt="">
+                                        <span>MPB</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card11">
+                                        <img src="./src/assets/playlist/11.jpeg" alt="">
+                                        <span>Rock</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card12">
+                                        <img src="./src/assets/playlist/12.jpeg" alt="">
+                                        <span>Hip Hop</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card13">
+                                        <img src="./src/assets/playlist/13.jpeg" alt="">
+                                        <span>Indie</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card14">
+                                        <img src="./src/assets/playlist/14.jpeg" alt="">
+                                        <span>Relax</span>
+                                    </div>
+                                </a>
+                                <a href="" class="cards">
+                                    <div class="cards card15">
+                                        <img src="./src/assets/playlist/15.jpeg" alt="">
+                                        <span>Música Latina</span>
+                                    </div>
+                                </a>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div id="result-artist" class="hidden">
+                    <div class="grid-container">
+                        <div class="artist-card" id="">
+                            <div class="card-img">
+                                <img id="artist-img" class="artist-img">
+                                <div class="play">
+                                    <span class="fa fa-solid fa-play"></span>
+                                </div>
+                            </div>
+                            <div class="card-text">
+                                <a href="" class="vst" title="Foo Fighters"></a>
+                                <span id="artist-name" class="artist-name"></span>
+                                <span class="artist-categorie">Artista</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </main>
+
     <footer class="premium">
         <div class="premium__text">
             <p>TESTAR O PREMIUM DE GRAÇA</p>
-            <p id="subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito.</p>
+            <p id="subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de
+                cartão de crédito.</p>
         </div>
         <div class="button__premium">
             <button>
@@ -72,6 +230,7 @@
             </button>
         </div>
     </footer>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
